--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,25 +47,7 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.129 0.042 264.695);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.129 0.042 264.695);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.208 0.042 265.755);
-  --primary-foreground: oklch(0.984 0.003 247.858);
-  --secondary: oklch(0.968 0.007 247.896);
-  --secondary-foreground: oklch(0.208 0.042 265.755);
-  --muted: oklch(0.968 0.007 247.896);
-  --muted-foreground: oklch(0.554 0.046 257.417);
-  --accent: oklch(0.968 0.007 247.896);
-  --accent-foreground: oklch(0.208 0.042 265.755);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.929 0.013 255.508);
-  --input: oklch(0.929 0.013 255.508);
-  --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
@@ -79,6 +61,33 @@
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+
+  --background: 150 15% 5%;
+  --foreground: 136 100% 98%;
+
+  --card: 124 11% 14%;
+  --card-foreground: 136 100% 98%;
+
+  --popover: 124 11% 14%;
+  --popover-foreground: 136 100% 98%;
+
+  --primary: 148 18% 21%;
+  --primary-foreground: 136 100% 98%;
+
+  --secondary: 110 14% 36%;
+  --secondary-foreground: 136 100% 98%;
+
+  --muted: 126 10% 20%;
+  --muted-foreground: 126 10% 80%;
+
+  --accent: 66 17% 67%;
+  --accent-foreground: 148 18% 21%;
+
+  --border: 153 15% 14%;
+  --input: 153 15% 14%;
+  --ring: 66 17% 67%;
+
+  --radius: 1rem;
 }
 
 .dark {
